--- a/css/css.css
+++ b/css/css.css
@@ -1,28 +1,32 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     background: #6b63ff;
     margin: 0;
     padding-bottom: 60px;
     overflow-x: hidden;
+    font-family: 'Manrope', sans-serif;
+
 }
 header {
     background: #fff;
 }
-.left.cmptt-menu {
-    width: 70px;
-    z-index: 5;
-    position: absolute;
-    padding-bottom: 10px;
-}
-
 .cmptt-menu {
+    width: 70px;
+    z-index: 999;
+    padding-bottom: 10px;
     top: 0;
-    width: 250px;
-    z-index: 10;
     background: #6C63FF;
     bottom: 0;
     margin-bottom: 0;
     margin-top: 0;
-    padding-bottom: 70px;
     position: fixed;
 }
 .sidebar-menu {
@@ -61,7 +65,7 @@ header {
     font-size: 20px;
 }
 .sidebar-menu ul a img {width: 70px;}
-.Header {margin-left: 90px;}
+.Header {margin-left: 90px;position: relative;}
 .Header::before{
 	content: "";
     background: url(../img/backgroundHeaderSvg.svg) no-repeat;
@@ -71,12 +75,364 @@ header {
     right: 0;
     bottom: 0;
     z-index: 0;
-    width: 50%;
+    width: 40%;
 
 }
 .Header h1{font-size: 263px;}
-.Header p{font-size: 40px;color:#898989;}
+.Header h1 span{color: #6b63ff;}
+.Header p{    font-size: 25px;
+    color: #898989;
+    margin-left: 18px;}
+.Header a.scrolldown {
+    display: block;
+    border: 2px solid #eee;
+    border-radius: 50%;
+    height: 60px;
+    width: 60px;
+    text-align: center;
+    font-size: 35px;
+    margin: 0px 15px;
+    margin-top: 32px !important;
+    color: #eee;
+}
+.Header a.scrolldown:hover {color:#000;}
 
+
+/*------------------------------------------------START CARD STYLE*/
+
+/* .flip-card-container */
+.avatarPic {
+    z-index: 3;
+    border-radius: 50%;
+    height: 180px;
+    width: 180px;
+
+}
+.flip-card-container {
+    --hue: 150;
+    --primary: hsl(var(--hue), 50%, 50%);
+    --white-1: hsl(0, 0%, 90%);
+    /* --white-2: hsl(0, 0%, 80%); */
+    --dark: hsl(var(--hue), 25%, 10%);
+    --grey: hsl(0, 0%, 50%);
+
+    width: 310px;
+    height: 500px;
+    margin: 40px 0;
+
+    perspective: 1000px;
+}
+
+/* .flip-card */
+.flip-card {
+    width: inherit;
+    height: inherit;
+
+    position: relative;
+    transform-style: preserve-3d;
+    transition: .6s .1s;
+}
+
+/* hover and focus-within states */
+.flip-card-container:hover .flip-card,
+.flip-card-container:focus-within .flip-card {
+    transform: rotateY(180deg);
+}
+
+/* .card-... */
+.card-front,
+.card-back {
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+
+   /* background: var(--dark); */
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+
+    backface-visibility: hidden;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* .card-front */
+.card-front {
+    transform: rotateY(0deg);
+    z-index: 2;
+}
+
+/* .card-back */
+.card-back {
+    transform: rotateY(180deg);
+    z-index: 1;
+}
+
+/* figure */
+figure {
+    z-index: -1;
+}
+
+/* figure, .img-bg */
+figure,
+.img-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+}
+
+/* img */
+img {
+    height: 100%;
+    border-radius: 24px;
+}
+
+/* figcaption */
+figcaption {
+    display: block;
+
+    width: 100%;
+    margin-top: 1%;
+    padding: 8px 2px;
+
+    font-weight: bold;
+    line-height: 1.6;
+    letter-spacing: 2px;
+    word-spacing: 6px;
+    text-align: center;
+
+    position: absolute;
+    top: 0;
+    /* right: 12px;  */
+
+    color: var(--white-1);
+    /*background: hsla(var(--hue), 25%, 10%, .5); */
+}
+
+/* .img-bg */
+.img-bg {
+    background: hsla(var(--hue), 25%, 10%, .5);
+}
+
+.card-front .img-bg {
+    clip-path: polygon(0 40%, 100% 40%, 100% 100%, 0 100%);
+}
+
+.card-front .img-bg::before {
+    content: "";
+
+    position: absolute;
+    top: 41%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 100%;
+    height: 6px;
+    border: 1px solid var(--primary);
+    border-left-color: transparent;
+    border-right-color: transparent;
+
+    transition: .2s;
+}
+
+.card-back .img-bg {
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 60%);
+}
+
+/* hover state */
+.flip-card-container:hover .card-front .img-bg::before {
+    width: 6px;
+    border-left-color: var(--primary);
+    border-right-color: var(--primary);
+}
+
+/* ul */
+.flip-card-container ul {
+    padding-top: 50%;
+    margin: 0 auto;
+    width: 70%;
+    height: 100%;
+
+    list-style: none;
+    color: var(--white-1);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+/* li */
+.flip-card-container ul li {
+    width: 100%;
+    margin-top: 12px;
+    padding-bottom: 12px;
+
+    font-size: 14px;
+    text-align: center;
+
+    position: relative;
+}
+
+.flip-card-container ul li:nth-child(2n) {
+    color: var(--white-2);
+}
+
+.flip-card-container ul li:not(:last-child)::after {
+    content: "";
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 1px;
+
+    background: currentColor;
+    opacity: .2;
+}
+
+/* button */
+.flip-card-container button {
+    font-family: inherit;
+    font-weight: bold;
+    color: var(--white-1);
+
+    letter-spacing: 2px;
+
+    padding: 9px 20px;
+    border: 1px solid var(--grey);
+    border-radius: 1000px;
+    background: transparent;
+    transition: .3s;
+
+    cursor: pointer;
+}
+
+.flip-card-container button:hover,
+.flip-card-container button:focus {
+    color: var(--primary);
+    background: hsla(var(--hue), 25%, 10%, .2);
+    border-color: currentColor;
+}
+
+.flip-card-container button:active {
+    transform: translate(2px);
+}
+
+/* .design-container */
+.design-container {
+    --tr: 90;
+    --op: .5;
+
+    width: 100%;
+    height: 100%;
+
+    background: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    pointer-events: none;
+}
+
+/* .design */
+.design {
+    display: block;
+
+    background: var(--grey);
+    position: absolute;
+
+    opacity: var(--op);
+    transition: .3s;
+}
+
+.design--1,
+.design--2,
+.design--3,
+.design--4 {
+    width: 1px;
+    height: 100%;
+}
+
+.design--1,
+.design--2 {
+    top: 0;
+    transform: translateY(calc((var(--tr) - (var(--tr) * 2)) * 1%))
+}
+
+.design--1 {
+    left: 20%;
+}
+
+.design--2 {
+    left: 80%;
+}
+
+.design--3,
+.design--4 {
+    bottom: 0;
+    transform: translateY(calc((var(--tr) + (var(--tr) - var(--tr))) * 1%))
+}
+
+.design--3 {
+    left: 24%;
+}
+
+.design--4 {
+    left: 76%;
+}
+
+.design--5,
+.design--6,
+.design--7,
+.design--8 {
+    width: 100%;
+    height: 1px;
+}
+
+.design--5,
+.design--6 {
+    left: 0;
+    transform: translateX(calc((var(--tr) - (var(--tr) * 2)) * 1%));
+}
+
+.design--5 {
+    top: 41%;
+}
+
+.design--6 {
+    top: 59%;
+}
+
+.design--7,
+.design--8 {
+    right: 0;
+    transform: translateX(calc((var(--tr) + (var(--tr) - var(--tr))) * 1%))
+}
+
+.design--7 {
+    top: 44%;
+}
+
+.design--8 {
+    top: 56%;
+}
+
+/* states */
+.flip-card-container button:hover+.design-container,
+.flip-card-container button:active+.design-container,
+.flip-card-container button:focus+.design-container {
+    --tr: 20;
+    --op: .7;
+}
+/*------------------------------------------------END CARD STYLE*/
 
 
 
