--- a/css/css.css
+++ b/css/css.css
@@ -441,7 +441,7 @@ figcaption {
 
 /*---------------------------------------------START FOOTER*/
 .footer{
-    background: #152F4F;
+    background: #544dd6;
     color:white; }
 
 .links {
