--- a/css/css.css
+++ b/css/css.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
-
+/*start ini*/
 *,
 *::after,
 *::before {
@@ -7,435 +7,97 @@
     padding: 0;
     box-sizing: border-box;
 }
+.fullwidth {
+    width: 100%;
+}
+/*end ini*/
 body {
-    background: #000;
+    font-family: 'Lato';
+    font-weight: 500;
+    line-height: 1.7;
+    letter-spacing: normal;
+    background-color: #f3f3f3;
+    color: #191919;
+    position: relative;
     margin: 0;
-    overflow-x: hidden;
-    font-family: 'Manrope', sans-serif;
-
+    padding: 0;
+}
+#header {
+    overflow: hidden;
+    padding: 10px;
+    position: relative;
+    text-align: center;
 }
 .logo {
-    text-align: center;
+    height: 130px;
+    width: 130px;
+    margin-left: auto;
+    margin-right: auto;
 }
-.logo img{width: 150px;}
-header {
-    position: relative;
-}
-.Header {position: relative;}
-.Header h1{
-    font-size: 130px;
-    color: #fff;
-    font-weight: bold;
-    line-height: 0.99;
-    letter-spacing: 2px;
-    margin-bottom: 30px;
-}
-.Header h1 span{color: #ECA400;}
-.Header p{    font-size: 25px;
-    color: #898989;line-height: 2.3;
-    margin-left: 18px;}
-.Header a.scrolldown {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    font-size: 25px;
-    line-height: 60px;
-    text-align: center;
-    border: 1px solid #ECA400;
-    color: #ECA400 !important;
-    text-decoration: none;
-    z-index: 9999;
-    position: fixed;
-    bottom: 15px;
-    left: 5px;
-}
-.Header a.scrolldown:hover {color:#000;}
-.cmpttmain{
-    margin-top: 100px;
-}
-.cmpttmain h2, .myfooter h3{
-    text-transform: uppercase;
-    color: #ECA400;
-    letter-spacing: 1.5px;
-    font-size: 50px;
-    font-weight: bold;
-}
-.cmpttmain p, .myfooter p{
-    font-size: 18px;
-    color: rgba(255,255,255,0.5);
-}
-
-.sub-title-cmptt p span {
-    border-bottom: 6px solid #ECA400;
-    color: #ECA400;
-    font-weight: bold;
-    padding: 5px;
-}
-/*------------------------------------------------START CARD STYLE*/
-/* .flip-card-container */
-.avatarPic {
-    z-index: 3;
-    height: 100%;
-    width: 100%;
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
-
-}
-.flip-card-container {
-    overflow: hidden;
-    --hue: 41;
-    --primary: hsl(var(--hue), 50%, 50%);
-    --white-1: hsl(0, 0%, 90%);
-    /* --white-2: hsl(0, 0%, 80%); */
-    --dark: hsl(var(--hue), 25%, 10%);
-    --grey: hsl(0, 0%, 50%);
-    height: 500px;
-    margin: 40px 0;
-    perspective: 1000px;
-    background: #EAF8BF;
-    border-radius: 5px;
-    box-shadow: 0.1rem 0.25rem 1.25rem 0.0625rem rgba(0, 0, 0, 0.25);
-    -webkit-transition: all .3s ease-in-out 0s;
-    -o-transition: all .3s ease-in-out 0s;
-    transition: all .3s ease-in-out 0s;
-    position: relative;
-    top: 0;
-}
-
-.flip-card-container:hover{
-    top: -10px;
-    -webkit-box-shadow: 0 0 25px 0 rgb(0, 0, 0);
-    box-shadow: 0 0 25px 0 rgb(0, 0, 0);
-}
-
-/* .flip-card */
-.flip-card {
-    width: inherit;
-    height: inherit;
-
-    position: relative;
-    transform-style: preserve-3d;
-    transition: .6s .1s;
-}
-
-/* hover and focus-within states */
-.flip-card-container:hover .flip-card,
-.flip-card-container:focus-within .flip-card {
-    transform: rotateY(180deg);
-}
-
-/* .card-... */
-.card-front,
-.card-back {
-    width: 100%;
-    height: 100%;
-
-    /* background: var(--dark); */
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-
-    backface-visibility: hidden;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* .card-front */
-.card-front {
-    transform: rotateY(0deg);
-    z-index: 2;
-}
-
-/* .card-back */
-.card-back {
-    transform: rotateY(180deg);
-    z-index: 1;
-}
-
-/* figure */
-figure {
-    z-index: -1;
-}
-
-/* figure, .img-bg */
-figure,
-.img-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-}
-
-/* img */
-img {
-    height: 100%;
-    /*  border-radius: 24px; */
-}
-
-/* figcaption */
-figcaption {
-    display: block;
-
-    width: 100%;
-    /*  margin-top: 1%;*/
-    /*    padding: 8px 2px;*/
-
-    font-weight: bold;
-    line-height: 1.6;
-    letter-spacing: 2px;
-    word-spacing: 6px;
-    text-align: center;
-
-    position: absolute;
-    top: 0;
-    /* right: 12px;  */
-
-    color: var(--white-1);
-    /*background: hsla(var(--hue), 25%, 10%, .5); */
-}
-
-/* .img-bg */
-/*.img-bg {
-    background: hsla(var(--hue), 25%, 10%, .5);
-}*/
-
-.card-front .img-bg {
-    clip-path: polygon(0 40%, 100% 40%, 100% 100%, 0 100%);
-}
-
-.card-front .img-bg::before {
-    content: "";
-    position: absolute;
-    top: 51.5%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    width: 100%;
-    height: 6px;
-    border: 1px solid var(--primary);
-    border-left-color: transparent;
-    border-right-color: transparent;
-
-    transition: .2s;
-}
-
-.card-back .img-bg {
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 60%);
-}
-
-/* hover state */
-.flip-card-container:hover .card-front .img-bg::before {
-    width: 6px;
-    border-left-color: var(--primary);
-    border-right-color: var(--primary);
-}
-
-/* ul */
-.flip-card-container ul {
-    padding-top: 90%;
+.logo img {
+    height: 130px !important;
+    width: 130px !important;
     margin: 0 auto;
-    width: 70%;
-    height: 100%;
-
-    list-style: none;
-    color: var(--white-1);
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    margin-top: 13px;
+    border-radius: 50%;
+    border: 6px solid #e9e8e8;
+    background-size: cover;
 }
-
-/* li */
-.flip-card-container ul li {
-    width: 100%;
-    margin-top: 12px;
-    padding-bottom: 12px;
-    font-size: 14px;
-    text-align: center;
-    position: relative;
-    color: #000;
-}
-
-.flip-card-container ul li:nth-child(2n) {
-    color:#27476E;
-}
-
-.flip-card-container ul li:not(:last-child)::after {
-    content: "";
-
-    position: absolute;
-    bottom: 0;
-    left: 0;
-
-    width: 100%;
-    height: 1px;
-
-    background: currentColor;
-    opacity: .2;
-}
-/* Liens rÃ©seaux sociaux */
-.lien{
-    position: absolute;
-    padding-top: 220px;
-}
-
-/* button */
-.flip-card-container button {
-    font-family: inherit;
+.content-top h1{
+    font-size: 130px;
     font-weight: bold;
-    color: var(--white-1);
-
-    letter-spacing: 2px;
-
-    padding: 9px 20px;
-    border: 1px solid var(--grey);
-    border-radius: 1000px;
-    background: transparent;
-    transition: .3s;
-
-    cursor: pointer;
 }
-
-.flip-card-container button:hover,
-.flip-card-container button:focus {
-    color: var(--primary);
-    background: hsla(var(--hue), 25%, 10%, .2);
-    border-color: currentColor;
-}
-
-.flip-card-container button:active {
-    transform: translate(2px);
-}
-
-/* .design-container */
-.design-container {
-    --tr: 90;
-    --op: .5;
-
-    width: 100%;
-    height: 100%;
-
-    background: transparent;
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    pointer-events: none;
-}
-
-/* .design */
-.design {
+.all-card{
+    background: #fdfdfd;
+    overflow: hidden;
+    margin-top: 22px;
+    border-bottom: 1px solid #f0f0f0;
     display: block;
-
-    background: var(--grey);
-    position: absolute;
-
-    opacity: var(--op);
-    transition: .3s;
+    padding: 25px 10px;
+    border-radius: 10px;
 }
-
-.design--1,
-.design--2,
-.design--3,
-.design--4 {
-    width: 1px;
-    height: 100%;
-}
-
-.design--1,
-.design--2 {
-    top: 0;
-    transform: translateY(calc((var(--tr) - (var(--tr) * 2)) * 1%))
-}
-
-.design--1 {
-    left: 20%;
-}
-
-.design--2 {
-    left: 80%;
-}
-
-.design--3,
-.design--4 {
-    bottom: 0;
-    transform: translateY(calc((var(--tr) + (var(--tr) - var(--tr))) * 1%))
-}
-
-.design--3 {
-    left: 24%;
-}
-
-.design--4 {
-    left: 76%;
-}
-
-.design--5,
-.design--6,
-.design--7,
-.design--8 {
-    width: 100%;
-    height: 1px;
-}
-
-.design--5,
-.design--6 {
-    left: 0;
-    transform: translateX(calc((var(--tr) - (var(--tr) * 2)) * 1%));
-}
-
-.design--5 {
-    top: 41%;
-}
-
-.design--6 {
-    top: 59%;
-}
-
-.design--7,
-.design--8 {
-    right: 0;
-    transform: translateX(calc((var(--tr) + (var(--tr) - var(--tr))) * 1%))
-}
-
-.design--7 {
-    top: 44%;
-}
-
-.design--8 {
-    top: 56%;
-}
-
-/* states */
-.flip-card-container button:hover+.design-container,
-.flip-card-container button:active+.design-container,
-.flip-card-container button:focus+.design-container {
-    --tr: 20;
-    --op: .7;
-}
-.mycard {
-    /* display: block; */
+.all-card .mycard{
     float: left;
+    text-align: center;
+    margin-bottom: 20px;
 }
-/*------------------------------------------------END CARD STYLE*/
-
-
-/*------------------------------------------------start footer*/
-.myfooter {padding: 30px;}
-.myfooter p span{
+.apprenant-avatar {
     background: #ECA400;
-    color: #000;
-    padding: 5px;
-    letter-spacing: 7px;
-    font-size: 18px;
-    font-weight: bold;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
 }
-/*------------------------------------------------END footer*/
-
-.social-m a{color: black;font-size: 13px;}
+.apprenant-avatar img {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    width: 100%;
+}
+.mycard:hover .apprenant-avatar img:hover {
+    opacity: 0.5;
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+.apprenant-more ul {
+    padding: 0;
+}
+.apprenant-more ul li {
+    display: inline-block;
+    margin-left: 5px;
+}
+.apprenant-more a{
+    display: block;
+    width: 27px;
+    font-size: 10px;
+    height: 27px;
+    margin-top: 0;
+    color: rgba(119, 119, 119, 0.55);
+    background: #e9e8e8;
+    line-height: 27px;
+    transition: 0.5s;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.apprenant-more a:hover{background: #191919;color:#fff;}
