--- a/css/css.css
+++ b/css/css.css
@@ -16,8 +16,8 @@ body {
     font-weight: 500;
     line-height: 1.7;
     letter-spacing: normal;
-    background-color: #f3f3f3;
-    color: #191919;
+    background-color: #f93535;
+    color: #ffffff;
     position: relative;
     margin: 0;
     padding: 0;
@@ -52,16 +52,13 @@ body {
     line-height: 2.3;
 }
 .content-top p span {
-    border-bottom: 6px solid #FFC109;
     color: #ffc106;
     font-weight: bold;
     padding: 5px;
 }
-.all-card{
-    background: #fdfdfd;
+.all-card, .info-cmptt{
     overflow: hidden;
     margin-top: 22px;
-    border-bottom: 1px solid #f0f0f0;
     display: block;
     padding: 25px 10px;
     border-radius: 10px;
@@ -72,7 +69,7 @@ body {
     margin-bottom: 20px;
 }
 .apprenant-avatar {
-    background: #ECA400;
+    background: #f93535;
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -91,7 +88,7 @@ body {
     -o-transform: scale(1.1);
 }
 .apprenant-name a{
-    color: #797979;
+    color: #fff;
     display: block;
     margin-bottom: 4px;
     font-size: 14px;
@@ -101,24 +98,106 @@ body {
     transition: 0.3s;
     text-transform: capitalize;
 }
-.apprenant-more ul {
+.apprenant-more ul, .box-apprenant ul {
     padding: 0;
 }
-.apprenant-more ul li {
+.apprenant-more ul li, .box-apprenant ul li {
     display: inline-block;
     margin-left: 5px;
 }
-.apprenant-more a{
+.apprenant-more a, .box-apprenant ul li a{
     display: block;
     width: 27px;
     font-size: 10px;
     height: 27px;
     margin-top: 0;
-    color: rgba(119, 119, 119, 0.55);
-    background: #e9e8e8;
+    color: rgb(255, 255, 255);
+    background: #da2829;
     line-height: 27px;
     transition: 0.5s;
     border-radius: 50%;
     overflow: hidden;
 }
 .apprenant-more a:hover{background: #191919;color:#fff;}
+.info-cmptt{
+    margin-bottom: 25px;
+    border: none;
+    font-size: 15px;
+}
+.info-cmptt i{
+    float: left;
+    font-size: 35px;
+    margin-right: 15px;
+    margin-top: 5px;
+}
+.modal-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 98;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 99;
+    display: block;
+    width: 100%;
+    height:auto;
+    max-width: 400px;
+    background-color: #FFF;
+    border-radius: 16px;
+
+    padding: 25px;
+}
+.modal h1 {
+    color: #222;
+    font-size: 32px;
+    font-weight: 900;
+    margin-bottom: 15px;
+}
+
+.modal p {
+    color: #666;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 15px;
+
+}
+
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity .5s;
+}
+
+.fade-enter,
+.fade-leave-to {
+    opacity: 0;
+}
+
+.slide-enter-active,
+.slide-leave-active {
+    transition: transform .5s;
+}
+
+.slide-enter,
+.slide-leave-to {
+    transform: translateY(-50%) translateX(100vw);
+}
+.box-apprenant{
+    text-align: center;
+}
+.box-apprenant span{
+    font-size: 15px;
+}
+.modal .button{
+    font-size: 10px;
+    width: 100%;
+    margin: 15px 0 0 0;
+}
+.box-apprenant h2{color: black;}
